--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "prisma": "^6.16.2"
   }
