--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@faker-js/faker": "^10.0.0",
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "prisma": "^6.16.2"
+  },
+  "prisma": {
+    "seed": "node prisma/seeds/main.js"
   }
 }
