--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "prisma": "^6.16.2"
   },
   "prisma": {
